# headunit-revived

./: CHANGELOG.md  README.md  gradle.properties  settings.gradle.kts
.github/workflows/: README.md  android-ci.yml  build-debug-apk.yml
app/: build.gradle.kts  proguard-project.txt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/andrerinas/headunitrevived/: IShizuku.aidl
app/src/main/cpp/: CMakeLists.txt  ffmpeg_hevc_decoder.cpp  libusb.h  usbhelper.c
app/src/main/cpp/ffmpeg/: README.md
app/src/main/java/com/andrerinas/headunitrevived/: App.kt  AppComponent.kt
app/src/main/java/com/andrerinas/headunitrevived/aap/: AapAudio.kt  AapControl.kt  AapNavigationHelper.kt  AapProjectionActivity.kt  AapReadSingleMessage.kt  AapService.kt  AapTransport.kt  AapVideo.kt  KeyCode.kt
app/src/main/java/com/andrerinas/headunitrevived/aap/protocol/messages/: ServiceDiscoveryResponse.kt
app/src/main/java/com/andrerinas/headunitrevived/aap/protocol/proto/: Control.java
app/src/main/java/com/andrerinas/headunitrevived/app/: AutoStartReceiver.kt  BaseActivity.kt  UsbAttachedActivity.kt
app/src/main/java/com/andrerinas/headunitrevived/connection/: CommManager.kt  LibusbAccessoryConnection.kt  NativeAaHandshakeManager.kt  NearbyManager.kt  NetworkDiscovery.kt  SocketAccessoryConnection.kt  UsbAccessoryMode.kt  UsbNative.kt  WifiDirectCompat.kt  WifiDirectManager.kt
app/src/main/java/com/andrerinas/headunitrevived/connection/carkey/: CarKeyBroadcastReceiver.kt  CarKeyReceiver.kt  CarKeysManager.kt
app/src/main/java/com/andrerinas/headunitrevived/connection/carkey/fyt/: CarFYTReceiver.kt  ModuleCallback.kt  ModuleObject.kt  RemoteModule.kt  RemoteToolkit.kt
app/src/main/java/com/andrerinas/headunitrevived/decoder/: AudioDecoder.kt  AudioMixer.kt  AudioTrackWrapper.kt  FfmpegHevcDecoder.kt  SoftwareYuvFrameSink.kt  VideoDecoder.kt
app/src/main/java/com/andrerinas/headunitrevived/location/: GpsLocation.kt
app/src/main/java/com/andrerinas/headunitrevived/main/: AutoStartFragment.kt  HomeFragment.kt  LoadingScreenFragment.kt  MainActivity.kt  MicSettingsFragment.kt  QuickSettingsFragment.kt  SettingsFragment.kt  UsbListFragment.kt  VehicleInfoFragment.kt  WirelessConnectionFragment.kt
app/src/main/java/com/andrerinas/headunitrevived/ssl/: ConscryptInitializer.kt
app/src/main/java/com/andrerinas/headunitrevived/utils/: AppLog.kt  BluetoothHelper.kt  DialogUtils.kt  HeadUnitScreenConfig.kt  LocaleHelper.kt  SUExecutor.kt  Settings.kt  SettingsBackupManager.kt  ShareHotspotQrDialog.kt  SystemProperties.java  SystemService.java  ToastUtils.kt
app/src/main/java/com/andrerinas/headunitrevived/view/: GlProjectionView.kt  ProjectionView.kt  ProjectionViewScaler.kt
app/src/main/proto/: control.proto
app/src/main/res/layout/: activity_headunit.xml  dialog_loading_screen.xml  dialog_share_hotspot_qr.xml  fragment_loading_screen.xml
app/src/main/res/layout-port/: fragment_home.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ka/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ro/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-uk/: strings.xml
app/src/main/res/values-vi/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
